syntax="proto3";

option go_package = "/logs";

message Logs{
    string name = 1;
    string data = 2;
}

message LogRequest{
    Logs LogEntry = 1;
}

message LogResponse{
    string message = 1;
}

service LogServeice{
    rpc WriteLog(LogRequest) returns (LogResponse);
}